# LimbusLocalizationManager

./: .prettierrc  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build_release.yaml  update_gist.yml
docs/: README.ru.md  for_translators.md
docs/README/: ru.md  zh.md
scripts/update_gist/: localizations.toml  main.py
src/: globals.css  i18n.ts  main.tsx  router.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: default_config.json  default_config.toml
src-tauri/src/: lib.rs  main.rs  settings.rs  steam.rs  utils.rs
src/components/error-boundary/: error-boundary.tsx
src/components/fallback/: fallback.tsx
src/components/header/: header.module.css  header.tsx  styles.module.css
src/components/markdown/: markdown.tsx
src/components/navbar/: navbar.module.css  navbar.tsx
src/components/toast/: toast.module.css  toast.tsx
src/layouts/main/: main.module.css  main.tsx
src/layouts/window/: index.ts  window.module.css  window.tsx
src/locales/: en.json  ru-RU.json  ru.json  zh-Hant.json
src/pages/about/: index.ts  kim.module.css  kim.tsx  page.module.css  page.tsx
src/pages/home/: console.module.css  console.tsx  log.module.css  log.tsx  page.module.css  page.tsx
src/pages/localization/: actions.module.css  actions.tsx  index.ts  page.module.css  page.tsx
src/pages/localizations/: index.ts  page.tsx  (+1 more)
src/stores/: actions.ts  index.ts  localizations.ts  models.ts  settings.ts  state.ts
(+3 files in other folders)
