[package]
name = "limbus-launcher"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "limbus_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
dirs = "5.0"
anyhow = "1.0.97"
tokio = "1.44.1"
zip = "2.1"
tempfile = "3.10"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
winreg = "0.51.0"
